<resources>
    <!-- App -->
    <string name="app_name">Login</string>

    <!-- Actividades principales -->
    <string name="bienvenido_usuario">Bienvenido, Usuario</string>
    <string name="campana_notificacion">Campana de Notificación</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="informacion">Información</string>
    <string name="menu">Menu</string>
    <string name="regresar">Regresar</string>
    <string name="welcome_message">Bienvenido, %1$s</string>
    <string name="acerca_de">Acerca de la App</string>

    <!-- Funcionalidad -->
    <string name="borrar_datos">Borrar datos</string>
    <string name="btn_BorrarDatos">Borrar Datos</string>
    <string name="btn_MantenerSesion">Mantener Sesion</string>
    <string name="btn_MostrarDatos">Mostrar Datos Registrados</string>
    <string name="btn_borrar">Borrar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="btn_registrar">Registrar</string>

    <!-- Iconos y etiquetas -->
    <string name="agricultor_icon">Icono de Agricultor</string>
    <string name="cultivo_icon">Icono de Cultivo</string>
    <string name="inventario_icon">Icono de Inventario</string>
    <string name="mercado_icon">Icono de Mercado</string>
    <string name="riego_icon">Icono de Riego</string>

    <!-- Módulos -->
    <string name="agricultores">Agricultores</string>
    <string name="control_cultivos">Control y monitoreo de cultivos.</string>
    <string name="cultivos">Cultivos</string>
    <string name="gestion_agricultores">Gestión de agricultores.</string>
    <string name="inventario_agricola">Inventario Agrícola</string>
    <string name="mercado_ventas">Mercado y Ventas</string>
    <string name="mis_cultivos">Mis Cultivos</string>
    <string name="programacion_riego">Programación de tareas.</string>
    <string name="registro_insumos">Registro de insumos agrícolas.</string>
    <string name="tareas_riego">Tareas de Riego y Fertilización</string>
    <string name="compra_venta">Compra y venta de productos.</string>

    <!-- Inicio de sesión y registro -->
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="facebook_btn">Iniciar sesión con Facebook</string>
    <string name="google_btn">Iniciar sesión con Google</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="iniciar_sesion_con">o iniciar sesión con</string>
    <string name="olvidar_contraseña">Olvidé mi contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>

    <!-- Formulario de registro -->
    <string name="formulario_registro">Formulario de Registro</string>
    <string name="hint_apellidos">Apellidos</string>
    <string name="hint_cedula">Cédula</string>
    <string name="hint_edad">Edad</string>
    <string name="hint_nombres">Nombres</string>
    <string name="nivel_ingles">Nivel de Inglés:</string>
    <string name="seleccionar_fecha">Seleccionar Fecha de Nacimiento</string>
    <string name="fecha_no_seleccionada">Fecha no seleccionada</string>
    <string name="estado_casado">Casado</string>
    <string name="estado_soltero">Soltero</string>

    <!-- Pantalla cultivo -->
    <string name="descripcion_back_button">Volver</string>
    <string name="title_cultivo">Cultivos</string>
    <string name="btn_agregar_cultivo">Agregar Cultivo</string>
    <string name="categoria_cereales">Cereales</string>
    <string name="categoria_leguminosas">Leguminosas</string>
    <string name="categoria_industriales">Industriales</string>
    <string name="categoria_hortalizas">Hortalizas</string>
    <string name="categoria_frutales">Frutales</string>
    <string name="hint_nombre_cultivo">Nombre del cultivo</string>
    <string name="hint_fecha_inicio">Fecha de inicio</string>
    <string name="hint_ubicacion">Ubicación</string>
    <string name="btn_volver">Volver</string>
    <string name="btn_guardar">Guardar</string>
    <string name="tvCultivoInfo">Cultivo info</string>
    <string name="lista_cultivos">Lista de cultivos</string>
    <string name="cultivo_info">• %1$s\nFecha: %2$s\nUbicación: %3$s\nPrecio/caja: $%4$.2f</string>
    <string name="btnBuscarCultivo">Buscar Cultivos</string>
    <string name="hint_precio_caja">Precio por caja</string>

    <!-- Pantalla agricultores -->
    <string name="title_agricultores">Listado de Agricultores</string>
    <string name="editZona">Agregar Zona</string>
    <string name="editExperiencia">Experiencia</string>
    <string name="btnAgregarAgricultor">Agregar Agricultor</string>
    <string name="btnDelete">Eliminar</string>
    <string name="btnEdit">Editar</string>
    <string name="desc_back_button">Regresar a la pantalla anterior</string>
    <string name="buscadorAgricultor">Buscar agricultor por nombre</string>

    <!-- Pantalla Inventario Agricola -->
    <string name="editCantidad">Cantidad</string>
    <string name="editDescripcion">Descripción</string>
    <string name="textNombre">Nombre del insumo</string>
    <string name="btnAgregarInsumo">Agregar Insumo</string>
    <string name="recyclerInsumos">Lista de insumos agrícolas</string>
    <string name="titleInventario">Inventario Agrícola</string>
    <string name="buscadorInsumo">Buscar insumo por nombre</string>
    <string-array name="opciones_insumos">
        <item>Fertilizantes</item>
        <item>Pesticidas</item>
        <item>Semillas</item>
        <item>Agua de riego</item>
        <item>Maquinaria agrícola</item>
    </string-array>


    <!-- Pantalla Mecado y ventas -->
    <string name="btnAgregarProducto">Agregar Producto</string>
    <string name="btntitleMecardo">Mercado de Ventas Agrícolas</string>
    <string name="recycler_productos_desc">Lista de productos agrícolas disponibles</string>
    <string name="txtTipo">Tipo</string>
    <string name="txtPrecio">Precio: $</string>
    <string name="descripcion_precio">Precio: $</string>
    <string name="descripcion_cantidad">Cantidad: 0</string>
    <string name="descripcion_guardar">Guardar</string>
    <string name="descripcion_cancelar">Cancelar</string>
    <string name="descripcion_tipo_producto">Tipo de Producto</string>
    <string name="Tipo_Producto">Tipo de Producto</string>
    <string name="hint_precio">Ingrese el precio del producto</string>
    <string name="hint_cantidad">Ingrese la cantidad del producto</string>
    <string name="nombreCultivo">Nombre del cultivo</string>
    <string name="categoriaCultivo">Categoría</string>
    <string name="fechaInicioCultivo">Fecha de inicio</string>
    <string name="ubicacionCultivo">Ubicación</string>
    <string name="txtProductosSeleccionados">Productos seleccionados:</string>
    <string name="listaProductos">(Lista de nombres aquí)</string>
    <string name="btnGenerarVenta">Generar Venta</string>
    <string name="btnVender">Crear Venta</string>
    <string name="recyclerProductos">Mercado</string>
    <string name="btnEditarVenta">Editar Venta</string>
    <string name="btnEliminarVenta">Eliminar Venta</string>
    <string name="txtNombreCliente">Nombre del Cliente:</string>
    <string name="etNombreCliente">Ingrese el nombre</string>
    <string name="etCedulaCliente">Ingrese la cédula</string>
    <string name="txtCedulaCliente">Cédula del Cliente:</string>
    <string name="txtNotadeventa">Nota de Venta</string>
    <string name="btnConsultarVenta">Consultar Venta</string>
    <string name="ventasRegistradasTitle">Ventas Registradas</string>
    <string name="etBuscarVenta">Buscar por Cédula o Nombre</string>


    <!-- Pantalla Tarea -->
    <string name="titleTarea">Tareas de Riego y Fertilización</string>
    <string name="btnAgregarTarea">Ingrese una nueva Tarea</string>
    <string name="txtTarea">Nombre de la tarea</string>
    <string name="txtCultivoTarea">Nombre de cultivo tarea</string>
    <string name="buscadorTarea">Buscar tarea por nombre</string>">
    <string name="txtDescripcionTarea">Descripción de la tarea</string>
    <string name="txtFechaInicio">Fecha de inicio</string>
    <string name="txtFechaFin">Fecha de fin</string>
    <string name="txtAgricultoresTarea">Agricultores</string>


    <!-- Arrays -->
    <string-array name="generos_array">
        <item>Seleccione genero</item>
        <item>Masculino</item>
        <item>Femenino</item>
        <item>Otro</item>
    </string-array>

    <string-array name="nacionalidades_array">
        <item>Seleccione nacionalidad</item>
        <item>Ecuatoriana</item>
        <item>Colombiana</item>
        <item>Peruana</item>
        <item>Venezolana</item>
    </string-array>

    <string-array name="tipos_producto">
        <item>Tomates</item>
        <item>Maíz</item>
        <item>Trigo</item>
        <item>Verduras</item>
        <item>Frutas</item>
    </string-array>

    <!-- Información del proyecto -->
    <string name="info_proyecto">Grupo #2\nAplicación para el sector agrícola\nUsuario/contraseña: admin</string>
    <string name="integrantes">Integrantes:\n\n
Magallanes Matamoros Juan\n\n
Loor Vera Miguel\n\n
Arriaga Tubay Joffre\n\n
Huacon Ramirez Gregory\n\n
Mite Zapata Karla</string>

    <!-- Otros -->
    <string name="agregar">Agregar</string>

</resources>
