<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <EditText
        android:id="@+id/editNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:paddingVertical="12dp"
        android:paddingHorizontal="16dp"
        android:hint="@string/hint_nombres" />

    <EditText
        android:id="@+id/editEdad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:paddingVertical="12dp"
        android:paddingHorizontal="16dp"
        android:hint="@string/hint_edad"
        android:inputType="number" />

    <EditText
        android:id="@+id/editZona"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:paddingVertical="12dp"
        android:paddingHorizontal="16dp"
        android:hint="@string/hint_ubicacion" />

    <Spinner
        android:id="@+id/spinnerExperiencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/btnVolver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_volver" />

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_guardar"
            android:layout_marginStart="8dp"/>
    </LinearLayout>
</LinearLayout>
