<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingBottom="8dp">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_flecha"
            android:contentDescription="@string/btn_volver" />

        <TextView
            android:id="@+id/btntitleMecardo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btntitleMecardo"
            android:textSize="18sp"
            android:layout_marginStart="12dp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerProductos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/recycler_productos_desc"/>

    <Button
        android:id="@+id/btnVender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnVender"
        android:layout_marginTop="12dp" />

</LinearLayout>