<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/txtProductosSeleccionados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtProductosSeleccionados"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/listaProductos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/listaProductos"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/btnGenerarVenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnGenerarVenta"
        android:layout_marginTop="24dp" />
</LinearLayout>