<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:saveEnabled="false">

    <EditText
        android:id="@+id/editNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtTarea"
        android:minHeight="48dp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp" />

    <Spinner
        android:id="@+id/spinnerCultivo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:minHeight="48dp"
        android:paddingHorizontal="16dp" />

    <EditText
        android:id="@+id/editDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtDescripcionTarea"
        android:minHeight="48dp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txtDateInicio"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:clickable="true"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/txtFechaInicio"
            android:inputType="date" />

        <EditText
            android:id="@+id/txtDateFin"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:clickable="true"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/txtFechaFin"
            android:inputType="date" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtAgricultoresTarea" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerAgricultores"
        android:layout_width="match_parent"
        android:layout_height="178dp">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Insumos" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerInsumos"
        android:layout_width="match_parent"
        android:layout_height="153dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnVolver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="Regresar"
            android:text="@string/btn_volver" />

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/btn_guardar" />
    </LinearLayout>

</LinearLayout>
