<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Spinner
        android:id="@+id/spinnerNombreInsumo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/editDescripcion"
        android:hint="@string/editDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:paddingVertical="12dp"
        android:paddingHorizontal="16dp" />

    <EditText
        android:id="@+id/editCantidad"
        android:hint="@string/editCantidad"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:paddingVertical="12dp"
        android:paddingHorizontal="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/btnCancelarInsumo"
            android:text="@string/btn_cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/btnGuardarInsumo"
            android:text="@string/btn_guardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp" />
    </LinearLayout>
</LinearLayout>
