<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="4dp"
    app:cardCornerRadius="12dp">

    <LinearLayout
        android:padding="16dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/imageInsumo"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_inventar"
            android:layout_marginEnd="16dp" />

        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textNombre"
                android:text="@string/textNombre"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textDescripcion"
                android:text="@string/editDescripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textCantidad"
                android:text="@string/editCantidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/btnEditar"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_edit"
                android:contentDescription="@string/btnEdit"
                android:layout_marginBottom="8dp" />

            <ImageView
                android:id="@+id/btnEliminar"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_delete"
                android:contentDescription="@string/btnDelete" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
