<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:background="#EFEFEF"
    android:layout_marginBottom="8dp">

    <TextView
        android:id="@+id/tvCultivoInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvCultivoInfo"
        android:textSize="16sp"
        android:textColor="#000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="8dp">

        <Button
            android:id="@+id/btnEditar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnEdit" />

        <Button
            android:id="@+id/btnEliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnDelete"
            android:layout_marginStart="8dp" />
    </LinearLayout>
</LinearLayout>
